--- a/html/style.css
+++ b/html/style.css
@@ -1,20 +1,21 @@
 body{
   background: #f5f5f5;
   color: #303030;
-  font-family: 'Seugo IU';
+  font-family: 'Cursive';
 }
 
 label{
   width: 10%;
   display: inline-block;
-  text-align: right;
+  text-align: left;
 }
 
 input{
   background: #e5e5e5;
   color: #303030;
   font-size: 120%;
-  border: none;
+  border( 
+	color: #000000);
 }
 
 .Message{
@@ -23,10 +24,11 @@ input{
 
 #Main{
   background: #a0a0a0;
-  border-radius: 5%;
-  padding-left: 5%;
+	border-radius: 2.5%;
+  padding-left: 3.5%;
+	
 }
 
-#Title{
-  font-size: 300%;
+#Main h1.Title {
+  text-size: 100px;
 }
