--- a/html/style.css
+++ b/html/style.css
@@ -1,34 +1,40 @@
-body{
-  background: #f5f5f5;
+body1{
+  background: #FFF;
+  color: #FFF;
+}
+
+body2{
+  background: #000000;
   color: #303030;
-  font-family: 'Cursive';
 }
 
 label{
-  width: 10%;
+  width: auto;
   display: inline-block;
   text-align: left;
 }
 
 input{
-  background: #e5e5e5;
-  color: #303030;
+  background: cyan;
+  color: darkpurple;
   font-size: 120%;
-  border( 
-	color: #000000);
+  border-color: #000;
+	border: 10px;
 }
 
 .Message{
-  color: #a0a0a0;
+  color: darkred;
 }
 
 #Main{
-  background: #a0a0a0;
-	border-radius: 2.5%;
-  padding-left: 3.5%;
-	
+  background: #FFF;
+	border-radius: 5%;
+  padding: 5%;
 }
 
-#Main h1.Title {
+title {
   text-size: 100px;
+}
+life {
+	font: "Great Vibes"
 }
