--- a/html/style.css
+++ b/html/style.css
@@ -19,8 +19,10 @@ input{
   background: slategray;
   color: darkpurple;
   font-size: 120%;
+	max-width: 250px;
   border: 2px solid black;
 	font-family: 'Beth Ellen';
+	overflow-x: scroll;
 }
 
 .Message{
